branches/yaxx-proc/nfr/nfr.output
Terminals which are not used

   COMMENT


State 25 conflicts: 2 shift/reduce
State 45 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: advices

    2 advice: when IMPLIES soft_goal by side_effects_clause
    3       | soft_goal by side_effects_clause

    4 by: /* empty */
    5   | LEFT_BRACE RIGHT_BRACE
    6   | LEFT_BRACE advices RIGHT_BRACE

    7 side_effects_clause: /* empty */
    8                    | IMPLIES side_effects

    9 when: TRUE
   10     | FALSE
   11     | IDENTIFIER LEFT_PAR RIGHT_PAR
   12     | when boolop when

   13 boolop: AND
   14       | OR

   15 soft_goal: nfr_type
   16          | nfr_type FOR topics

   17 nfr_type: IDENTIFIER

   18 topic: IDENTIFIER
   19      | IDENTIFIER AT pointcuts

   20 topics: topic
   21       | topic SEMICOLON topics

   22 pointcuts: topic
   23          | topic COMMA pointcuts

   24 advices: advice
   25        | advice boolop advices

   26 side_effects: op soft_goal
   27             | op soft_goal COMMA side_effects

   28 op: MAKE
   29   | HELP
   30   | HURT
   31   | BREAK


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMA (258) 23 27
IDENTIFIER (259) 11 17 18 19
FOR (260) 16
AT (261) 19
LEFT_BRACE (262) 5 6
RIGHT_BRACE (263) 5 6
IMPLIES (264) 2 8
SEMICOLON (265) 21
COMMENT (266)
TRUE (267) 9
FALSE (268) 10
AND (269) 13
OR (270) 14
MAKE (271) 28
HELP (272) 29
HURT (273) 30
BREAK (274) 31
LEFT_PAR (275) 11
RIGHT_PAR (276) 11


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
start (23)
    on left: 1, on right: 0
advice (24)
    on left: 2 3, on right: 24 25
by (25)
    on left: 4 5 6, on right: 2 3
side_effects_clause (26)
    on left: 7 8, on right: 2 3
when (27)
    on left: 9 10 11 12, on right: 2 12
boolop (28)
    on left: 13 14, on right: 12 25
soft_goal (29)
    on left: 15 16, on right: 2 3 26 27
nfr_type (30)
    on left: 17, on right: 15 16
topic (31)
    on left: 18 19, on right: 20 21 22 23
topics (32)
    on left: 20 21, on right: 16 21
pointcuts (33)
    on left: 22 23, on right: 19 23
advices (34)
    on left: 24 25, on right: 1 6 25
side_effects (35)
    on left: 26 27, on right: 8 27
op (36)
    on left: 28 29 30 31, on right: 26 27


state 0

    0 $accept: . start $end

    IDENTIFIER  shift, and go to state 1
    TRUE        shift, and go to state 2
    FALSE       shift, and go to state 3

    start      go to state 4
    advice     go to state 5
    when       go to state 6
    soft_goal  go to state 7
    nfr_type   go to state 8
    advices    go to state 9


state 1

   11 when: IDENTIFIER . LEFT_PAR RIGHT_PAR
   17 nfr_type: IDENTIFIER .

    LEFT_PAR  shift, and go to state 10

    $default  reduce using rule 17 (nfr_type)


state 2

    9 when: TRUE .

    $default  reduce using rule 9 (when)


state 3

   10 when: FALSE .

    $default  reduce using rule 10 (when)


state 4

    0 $accept: start . $end

    $end  shift, and go to state 11


state 5

   24 advices: advice .
   25        | advice . boolop advices

    AND  shift, and go to state 12
    OR   shift, and go to state 13

    $default  reduce using rule 24 (advices)

    boolop  go to state 14


state 6

    2 advice: when . IMPLIES soft_goal by side_effects_clause
   12 when: when . boolop when

    IMPLIES  shift, and go to state 15
    AND      shift, and go to state 12
    OR       shift, and go to state 13

    boolop  go to state 16


state 7

    3 advice: soft_goal . by side_effects_clause

    LEFT_BRACE  shift, and go to state 17

    $default  reduce using rule 4 (by)

    by  go to state 18


state 8

   15 soft_goal: nfr_type .
   16          | nfr_type . FOR topics

    FOR  shift, and go to state 19

    $default  reduce using rule 15 (soft_goal)


state 9

    1 start: advices .

    $default  reduce using rule 1 (start)


state 10

   11 when: IDENTIFIER LEFT_PAR . RIGHT_PAR

    RIGHT_PAR  shift, and go to state 20


state 11

    0 $accept: start $end .

    $default  accept


state 12

   13 boolop: AND .

    $default  reduce using rule 13 (boolop)


state 13

   14 boolop: OR .

    $default  reduce using rule 14 (boolop)


state 14

   25 advices: advice boolop . advices

    IDENTIFIER  shift, and go to state 1
    TRUE        shift, and go to state 2
    FALSE       shift, and go to state 3

    advice     go to state 5
    when       go to state 6
    soft_goal  go to state 7
    nfr_type   go to state 8
    advices    go to state 21


state 15

    2 advice: when IMPLIES . soft_goal by side_effects_clause

    IDENTIFIER  shift, and go to state 22

    soft_goal  go to state 23
    nfr_type   go to state 8


state 16

   12 when: when boolop . when

    IDENTIFIER  shift, and go to state 24
    TRUE        shift, and go to state 2
    FALSE       shift, and go to state 3

    when  go to state 25


state 17

    5 by: LEFT_BRACE . RIGHT_BRACE
    6   | LEFT_BRACE . advices RIGHT_BRACE

    IDENTIFIER   shift, and go to state 1
    RIGHT_BRACE  shift, and go to state 26
    TRUE         shift, and go to state 2
    FALSE        shift, and go to state 3

    advice     go to state 5
    when       go to state 6
    soft_goal  go to state 7
    nfr_type   go to state 8
    advices    go to state 27


state 18

    3 advice: soft_goal by . side_effects_clause

    IMPLIES  shift, and go to state 28

    $default  reduce using rule 7 (side_effects_clause)

    side_effects_clause  go to state 29


state 19

   16 soft_goal: nfr_type FOR . topics

    IDENTIFIER  shift, and go to state 30

    topic   go to state 31
    topics  go to state 32


state 20

   11 when: IDENTIFIER LEFT_PAR RIGHT_PAR .

    $default  reduce using rule 11 (when)


state 21

   25 advices: advice boolop advices .

    $default  reduce using rule 25 (advices)


state 22

   17 nfr_type: IDENTIFIER .

    $default  reduce using rule 17 (nfr_type)


state 23

    2 advice: when IMPLIES soft_goal . by side_effects_clause

    LEFT_BRACE  shift, and go to state 17

    $default  reduce using rule 4 (by)

    by  go to state 33


state 24

   11 when: IDENTIFIER . LEFT_PAR RIGHT_PAR

    LEFT_PAR  shift, and go to state 10


state 25

   12 when: when . boolop when
   12     | when boolop when .

    AND  shift, and go to state 12
    OR   shift, and go to state 13

    AND       [reduce using rule 12 (when)]
    OR        [reduce using rule 12 (when)]
    $default  reduce using rule 12 (when)

    boolop  go to state 16


state 26

    5 by: LEFT_BRACE RIGHT_BRACE .

    $default  reduce using rule 5 (by)


state 27

    6 by: LEFT_BRACE advices . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 34


state 28

    8 side_effects_clause: IMPLIES . side_effects

    MAKE   shift, and go to state 35
    HELP   shift, and go to state 36
    HURT   shift, and go to state 37
    BREAK  shift, and go to state 38

    side_effects  go to state 39
    op            go to state 40


state 29

    3 advice: soft_goal by side_effects_clause .

    $default  reduce using rule 3 (advice)


state 30

   18 topic: IDENTIFIER .
   19      | IDENTIFIER . AT pointcuts

    AT  shift, and go to state 41

    $default  reduce using rule 18 (topic)


state 31

   20 topics: topic .
   21       | topic . SEMICOLON topics

    SEMICOLON  shift, and go to state 42

    $default  reduce using rule 20 (topics)


state 32

   16 soft_goal: nfr_type FOR topics .

    $default  reduce using rule 16 (soft_goal)


state 33

    2 advice: when IMPLIES soft_goal by . side_effects_clause

    IMPLIES  shift, and go to state 28

    $default  reduce using rule 7 (side_effects_clause)

    side_effects_clause  go to state 43


state 34

    6 by: LEFT_BRACE advices RIGHT_BRACE .

    $default  reduce using rule 6 (by)


state 35

   28 op: MAKE .

    $default  reduce using rule 28 (op)


state 36

   29 op: HELP .

    $default  reduce using rule 29 (op)


state 37

   30 op: HURT .

    $default  reduce using rule 30 (op)


state 38

   31 op: BREAK .

    $default  reduce using rule 31 (op)


state 39

    8 side_effects_clause: IMPLIES side_effects .

    $default  reduce using rule 8 (side_effects_clause)


state 40

   26 side_effects: op . soft_goal
   27             | op . soft_goal COMMA side_effects

    IDENTIFIER  shift, and go to state 22

    soft_goal  go to state 44
    nfr_type   go to state 8


state 41

   19 topic: IDENTIFIER AT . pointcuts

    IDENTIFIER  shift, and go to state 30

    topic      go to state 45
    pointcuts  go to state 46


state 42

   21 topics: topic SEMICOLON . topics

    IDENTIFIER  shift, and go to state 30

    topic   go to state 31
    topics  go to state 47


state 43

    2 advice: when IMPLIES soft_goal by side_effects_clause .

    $default  reduce using rule 2 (advice)


state 44

   26 side_effects: op soft_goal .
   27             | op soft_goal . COMMA side_effects

    COMMA  shift, and go to state 48

    $default  reduce using rule 26 (side_effects)


state 45

   22 pointcuts: topic .
   23          | topic . COMMA pointcuts

    COMMA  shift, and go to state 49

    COMMA     [reduce using rule 22 (pointcuts)]
    $default  reduce using rule 22 (pointcuts)


state 46

   19 topic: IDENTIFIER AT pointcuts .

    $default  reduce using rule 19 (topic)


state 47

   21 topics: topic SEMICOLON topics .

    $default  reduce using rule 21 (topics)


state 48

   27 side_effects: op soft_goal COMMA . side_effects

    MAKE   shift, and go to state 35
    HELP   shift, and go to state 36
    HURT   shift, and go to state 37
    BREAK  shift, and go to state 38

    side_effects  go to state 50
    op            go to state 40


state 49

   23 pointcuts: topic COMMA . pointcuts

    IDENTIFIER  shift, and go to state 30

    topic      go to state 45
    pointcuts  go to state 51


state 50

   27 side_effects: op soft_goal COMMA side_effects .

    $default  reduce using rule 27 (side_effects)


state 51

   23 pointcuts: topic COMMA pointcuts .

    $default  reduce using rule 23 (pointcuts)
